--- a/services.html
+++ b/services.html
@@ -393,7 +393,7 @@
 						<form class="form-send" data-toggle="validator" action="hendler.php" method="post" role="form" data-form="send">
 							<div class="row">
 								<div class="col-xs-12 col-md-12 col-sm-12">
-									<div class="title my-table border-bottom my-table my-table--center">
+									<div class="title my-table border-bottom my-table my-table-center">
 										<h4>Узнайте стоимость и сроки работ для вашего объекта</h4>
 										<hr />
 									</div>
