--- a/services.html
+++ b/services.html
@@ -105,9 +105,9 @@
 				<div class="row">
 					
 					<!--left-side\etc.-->
-					<div class="col-xs-12 col-md-3 col-sm-3">
+					<div class="col-xs-12 col-md-3 col-sm-4 hidden-xs">
 						<div class="left-side menu-projects no-padding-bottom services-menu">
-							<a class="menu-item-lvl-1" data-toggle="collapse" href="#menu1" aria-expanded="false" aria-controls="menu1">
+							<a class="menu-item-lvl-1 icon-1" data-toggle="collapse" href="#menu1" aria-expanded="false" aria-controls="menu1">
 								Промышленные полы
 							</a>
 							<div class="collapse in" id="menu1">
@@ -121,7 +121,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 collapsed" data-toggle="collapse" href="#menu2" aria-expanded="false" aria-controls="menu2">
+							<a class="menu-item-lvl-1 icon-2 collapsed" data-toggle="collapse" href="#menu2" aria-expanded="false" aria-controls="menu2">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu2">
@@ -135,10 +135,80 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 collapsed last" data-toggle="collapse" href="#menu3" aria-expanded="false" aria-controls="menu3">
+							<a class="menu-item-lvl-1 icon-3 collapsed" data-toggle="collapse" href="#menu3" aria-expanded="false" aria-controls="menu3">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu3">
+								<div class="menu-wrap">
+									<ul>
+										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+									</ul>
+								</div>
+							</div>
+							<a class="menu-item-lvl-1 icon-4 collapsed" data-toggle="collapse" href="#menu4" aria-expanded="false" aria-controls="menu4">
+								Промышленные полы
+							</a>
+							<div class="collapse" id="menu4">
+								<div class="menu-wrap">
+									<ul>
+										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+									</ul>
+								</div>
+							</div>
+							<a class="menu-item-lvl-1 icon-5 collapsed" data-toggle="collapse" href="#menu5" aria-expanded="false" aria-controls="menu5">
+								Промышленные полы
+							</a>
+							<div class="collapse" id="menu5">
+								<div class="menu-wrap">
+									<ul>
+										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+									</ul>
+								</div>
+							</div>
+							<a class="menu-item-lvl-1 icon-6 collapsed" data-toggle="collapse" href="#menu6" aria-expanded="false" aria-controls="menu6">
+								Промышленные полы
+							</a>
+							<div class="collapse" id="menu6">
+								<div class="menu-wrap">
+									<ul>
+										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+									</ul>
+								</div>
+							</div>
+							<a class="menu-item-lvl-1 icon-7 collapsed" data-toggle="collapse" href="#menu7" aria-expanded="false" aria-controls="menu7">
+								Промышленные полы
+							</a>
+							<div class="collapse" id="menu7">
+								<div class="menu-wrap">
+									<ul>
+										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+										<li><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
+									</ul>
+								</div>
+							</div>
+							<a class="menu-item-lvl-1 icon-8 last collapsed" data-toggle="collapse" href="#menu8" aria-expanded="false" aria-controls="menu8">
+								Промышленные полы
+							</a>
+							<div class="collapse" id="menu8">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -181,7 +251,7 @@
 					<!--left-side\etc. END-->
 					
 					<!--main content\etc.-->
-					<div class="col-xs-12 col-md-9 col-sm-9">
+					<div class="col-xs-12 col-md-9 col-sm-8">
 						<div class="row">
 							<div class="col-xs-12 col-md-12 col-sm-12">
 								<div class="title border-bottom my-margin-1">
