--- a/project.html
+++ b/project.html
@@ -117,7 +117,7 @@
 							<div class="col-xs-12 col-md-7 col-sm-7">
 								<div class="gallery-main-object">
 									<img src="assets/img/item-1.jpg" class="full-width">
-									<a class="inner">
+									<a href="assets/img/item-1.jpg" data-lightbox="image-1" class="inner">
 										<span class="icon">
 											
 										</span>
@@ -125,7 +125,7 @@
 								</div>
 								<div class="gallery-object">
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/logo.png">
 									</div>
 									<div>
 										<img src="assets/img/item-1.jpg">
@@ -280,10 +280,10 @@
 	<!--<link href='assets/css/fontello.css' rel='stylesheet' type='text/css'>-->
 	<link href='assets/css/owl.carousel.css' rel='stylesheet' type='text/css'>
 	<link href='assets/css/grayscale.css' rel='stylesheet' type='text/css'>
-	<!--<link href='assets/css/lightbox.css' rel='stylesheet' type='text/css'>-->
+	<link href='assets/css/lightbox.css' rel='stylesheet' type='text/css'>
 	
 	<script type="text/javascript" src="assets/js/jquery.maskedinput.js"></script>
-	<!--<script type="text/javascript" src="assets/js/lightbox.min.js"></script>-->
+	<script type="text/javascript" src="assets/js/lightbox.min.js"></script>
 	<script type="text/javascript" src="assets/js/form.js"></script>
 	<script type="text/javascript" src="assets/js/validator.min.js"></script>
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
