--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 				<div class="row">
 					
 					<!--left-side\etc.-->
-					<div class="col-xs-12 col-md-3 col-sm-3">
+					<div class="col-xs-12 col-md-3 col-sm-3 hidden-xs">
 						<div class="left-side menu-projects">
 							<ul>
 								<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
