menu active + offset 100
menu active + offset 100

--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body data-spy="scroll" data-target="#menu" data-offset="0">
+<body data-spy="scroll" data-target="#menu" data-offset="100">
 	<div class="sticky-page">
 		<section class="header">
 			<section class="header-lvl-1">
@@ -550,7 +550,7 @@
 										<div class="form-group">
 											<div class="row">
 												<div class="col-xs-12">
-													<input type="file" data-item="file" class="" required/>
+													<input multiple="" type="file" data-item="file" class="" required/>
 												</div>
 												<div class="col-xs-12">
 													<div class="help-block with-errors"></div>
