--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 	<![endif]-->
 </head>
 <body data-spy="scroll" data-target="#menu" data-offset="100">
-	<div class="offcanvas navmenu-fixed-left my-offcanvas-width" id="offCanvas">
+	<div class="navmenu-fixed-right my-offcanvas-width" data-item="offcanvas-menu">
 		<section class="content visible-xs">
 			<div class="container">
 				<div class="row">
@@ -149,7 +149,7 @@
 			</div>
 		</section>
 	</div>
-	<a href="#" class="btn btn-primary my-btn visible-xs my-offcanvas-trigger design-yellow" data-toggle="offcanvas" data-target="#offCanvas" data-canvas="body">Категории</a>
+	<a href="#" class="btn btn-primary my-btn visible-xs my-offcanvas-trigger design-yellow">Категории</a>
 
 
 	<div class="sticky-page">
