--- a/projects.html
+++ b/projects.html
@@ -188,7 +188,7 @@
 					
 				</div>
 				<!--pagination\etc.-->
-				<div class="row">
+				<div class="row my-offset-top">
 					<div class="col-xs-12 col-md-12 col-sm-12">
 						<div class="title border-bottom my-margin-1 my-table">
 							<h3>Заказчики</h3>
