--- a/project.html
+++ b/project.html
@@ -117,30 +117,35 @@
 							<div class="col-xs-12 col-md-7 col-sm-7">
 								<div class="gallery-main-object">
 									<img src="assets/img/item-1.jpg" class="full-width">
-									<a href="assets/img/item-1.jpg" data-lightbox="image-1" class="inner">
-										<span class="icon">
-											
-										</span>
+									<a href="assets/img/item-1.jpg" data-lightbox="package-1" class="this inner">
+										<span class="icon"></span>
 									</a>
+									<div class="gallery-main-group">
+										<a href="assets/img/item-1.jpg" data-lightbox="package-1"></a>
+										<a href="assets/img/item-2.jpg" data-lightbox="package-1"></a>
+										<a href="assets/img/item-1.jpg" data-lightbox="package-1"></a>
+										<a href="assets/img/item-1.jpg" data-lightbox="package-1"></a>
+										<a href="assets/img/item-1.jpg" data-lightbox="package-1"></a>
+									</div>
 								</div>
 								<div class="gallery-object">
 									<div>
-										<img src="assets/img/logo.png">
+										<img src="assets/img/logo.png" data-lightbox="package-1">
 									</div>
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/item-1.jpg" data-lightbox="package-1">
 									</div>
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/item-1.jpg" data-lightbox="package-1">
 									</div>
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/item-1.jpg" data-lightbox="package-1">
 									</div>
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/item-1.jpg" data-lightbox="package-1">
 									</div>
 									<div>
-										<img src="assets/img/item-1.jpg">
+										<img src="assets/img/item-1.jpg" data-lightbox="package-1">
 									</div>
 								</div>
 							</div>
