menu like a click
menu like a click

--- a/services-opened.html
+++ b/services-opened.html
@@ -25,10 +25,10 @@
 					<!--left-side\etc.-->
 					<div class="col-xs-12">
 						<div class="left-side menu-projects no-padding-bottom services-menu">
-							<a class="menu-item-lvl-1 icon-1" data-toggle="collapse" href="#menu1-1" aria-expanded="false" aria-controls="menu1-1">
+							<a class="menu-item-lvl-1 icon-1" href="#">
 								Промышленные полы
 							</a>
-							<div class=" in" id="menu1-1">
+							<div class="collapse in">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -39,10 +39,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-2 collapsed" data-toggle="collapse" href="#menu2-2" aria-expanded="false" aria-controls="menu2-2">
+							<a class="menu-item-lvl-1 icon-2 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu2-2">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -53,10 +53,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-3 collapsed" data-toggle="collapse" href="#menu3-3" aria-expanded="false" aria-controls="menu3-3">
+							<a class="menu-item-lvl-1 icon-3 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu3-3">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -67,10 +67,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-4 collapsed" data-toggle="collapse" href="#menu4-4" aria-expanded="false" aria-controls="menu4-4">
+							<a class="menu-item-lvl-1 icon-4 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu4-4">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -81,10 +81,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-5 collapsed" data-toggle="collapse" href="#menu5-5" aria-expanded="false" aria-controls="menu5-5">
+							<a class="menu-item-lvl-1 icon-5 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu5-5">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -95,10 +95,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-6 collapsed" data-toggle="collapse" href="#menu6-6" aria-expanded="false" aria-controls="menu6-6">
+							<a class="menu-item-lvl-1 icon-6 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu6-6">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -109,10 +109,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-7 collapsed" data-toggle="collapse" href="#menu7-7" aria-expanded="false" aria-controls="menu7-7">
+							<a class="menu-item-lvl-1 icon-7 collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu7-7">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -123,10 +123,10 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-8 last collapsed" data-toggle="collapse" href="#menu8-8" aria-expanded="false" aria-controls="menu8-8">
+							<a class="menu-item-lvl-1 icon-8 last collapsed" href="#">
 								Промышленные полы
 							</a>
-							<div class="collapse" id="menu8-8">
+							<div class="collapse">
 								<div class="menu-wrap">
 									<ul>
 										<li class="active"><a href="#">Кровли из листового и рулонного металла (фальцевая)</a></li>
@@ -241,7 +241,7 @@
 					<!--left-side\etc.-->
 					<div class="col-xs-12 col-md-3 col-sm-4 hidden-xs">
 						<div class="left-side menu-projects no-padding-bottom services-menu">
-							<a class="menu-item-lvl-1 icon-1" data-toggle="collapse" href="#menu1" aria-expanded="false" aria-controls="menu1">
+							<a class="menu-item-lvl-1 icon-1" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse in" id="menu1">
@@ -255,7 +255,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-2 collapsed" data-toggle="collapse" href="#menu2" aria-expanded="false" aria-controls="menu2">
+							<a class="menu-item-lvl-1 icon-2 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu2">
@@ -269,7 +269,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-3 collapsed" data-toggle="collapse" href="#menu3" aria-expanded="false" aria-controls="menu3">
+							<a class="menu-item-lvl-1 icon-3 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu3">
@@ -283,7 +283,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-4 collapsed" data-toggle="collapse" href="#menu4" aria-expanded="false" aria-controls="menu4">
+							<a class="menu-item-lvl-1 icon-4 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu4">
@@ -297,7 +297,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-5 collapsed" data-toggle="collapse" href="#menu5" aria-expanded="false" aria-controls="menu5">
+							<a class="menu-item-lvl-1 icon-5 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu5">
@@ -311,7 +311,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-6 collapsed" data-toggle="collapse" href="#menu6" aria-expanded="false" aria-controls="menu6">
+							<a class="menu-item-lvl-1 icon-6 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu6">
@@ -325,7 +325,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-7 collapsed" data-toggle="collapse" href="#menu7" aria-expanded="false" aria-controls="menu7">
+							<a class="menu-item-lvl-1 icon-7 collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu7">
@@ -339,7 +339,7 @@
 									</ul>
 								</div>
 							</div>
-							<a class="menu-item-lvl-1 icon-8 last collapsed" data-toggle="collapse" href="#menu8" aria-expanded="false" aria-controls="menu8">
+							<a class="menu-item-lvl-1 icon-8 last collapsed" href="#">
 								Промышленные полы
 							</a>
 							<div class="collapse" id="menu8">
